# keci-mobile-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/action/: basket.rs  mod.rs  order.rs  user.rs
src/controller/: address.rs  basket.rs  content.rs  listing.rs  mod.rs  order.rs  product.rs  seller.rs  user.rs
src/middleware/: user.rs
src/model/: address.rs  basket.rs  mod.rs  order.rs  user.rs
src/service/: address.rs  basket.rs  content.rs  listing.rs  mod.rs  order.rs  product.rs  seller.rs  user.rs
src/traits/: create.rs  service.rs
