[package]
name = "mobile-api"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefabalik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-service = "1.0.5"
actix-rt = "1.1.0"
serde = "1.0.104"
mongodb = "0.9.2"
bson = "0.14.0"
dotenv_codegen = "0.15.0"
futures = "0.3.4"
jsonwebtoken = "7.1.0"
bcrypt = "0.6"
actix-cors = "0.2.0"
num_cpus = "1.0"
